RESOLVED FIXED222347
REGRESSION(r267763): [GTK][WPE] user preferred languages are sent to the wrong network process
https://bugs.webkit.org/show_bug.cgi?id=222347
Summary REGRESSION(r267763): [GTK][WPE] user preferred languages are sent to the wron...
Carlos Garcia Campos
Reported 2021-02-24 01:36:24 PST
WebProcessPool::languageChanged() is creating the default website data store, so languages are sent to the newly created network process. We should send them to the existing network processes instead.
Attachments
Patch (1.59 KB, patch)
2021-02-24 01:37 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-02-24 01:37:40 PST
Carlos Garcia Campos
Comment 2 2021-02-24 02:59:38 PST
Note You need to log in before you can comment on or make changes to this bug.